--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"url": "https://sindresorhus.com"
 	},
 	"engines": {
-		"node": "18.x || 20.x"
+		"node": "20.x || 22.x"
 	},
 	"exports": "./lib/index.js",
 	"types": "./lib/index.d.ts",
@@ -29,11 +29,11 @@
 	],
 	"scripts": {
 		"freshlock": "rm -rf node_modules/ && rm .yarn/install-state.gz && rm yarn.lock && yarn",
-		"check-lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-		"check-format": "prettier --check \"**/*.{ts,js,cjs,mjs,json,yml,md}\"",
+		"check-lint": "eslint",
+		"check-format": "prettier --check .",
 		"check-tsc": "tsc --noEmit",
-		"lint": "eslint . --fix --ext .js,.jsx,.ts,.tsx",
-		"format": "prettier --write \"**/*.{ts,js,cjs,mjs,json,yml,md}\"",
+		"lint": "eslint --fix",
+		"format": "prettier --write .",
 		"build": "tsc",
 		"test": "NODE_OPTIONS='--loader=ts-node/esm' mocha"
 	},
@@ -47,21 +47,22 @@
 	],
 	"type": "module",
 	"dependencies": {
-		"execa": "^9.1.0",
+		"execa": "^9.2.0",
 		"find-versions": "^6.0.0"
 	},
 	"devDependencies": {
-		"@tsconfig/node18": "^18.2.4",
+		"@eslint/js": "^9.4.0",
+		"@tsconfig/node20": "^20.1.4",
 		"@types/mocha": "^10.0.6",
-		"@types/node": "^20.12.12",
-		"@typescript-eslint/eslint-plugin": "^7.9.0",
-		"@typescript-eslint/parser": "^7.9.0",
-		"eslint": "^8.57.0",
+		"@types/node": "^20.14.2",
+		"eslint": "^9.4.0",
 		"eslint-config-prettier": "^9.1.0",
+		"globals": "^15.4.0",
 		"mocha": "^10.4.0",
-		"prettier": "^3.2.5",
+		"prettier": "^3.3.2",
 		"ts-node": "^10.9.2",
-		"typescript": "^5.4.5"
+		"typescript": "^5.4.5",
+		"typescript-eslint": "^8.0.0-alpha.30"
 	},
-	"packageManager": "yarn@4.2.2"
+	"packageManager": "yarn@4.3.0"
 }
