--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"url": "https://sindresorhus.com"
 	},
 	"engines": {
-		"node": "20.x || 22.x"
+		"node": "20.x || 22.x || 24.x"
 	},
 	"exports": "./lib/index.js",
 	"types": "./lib/index.d.ts",
