--- a/.github/workflows/gh-publish.yml
+++ b/.github/workflows/gh-publish.yml
@@ -21,6 +21,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "22.18.0"
+          package-manager-cache: false
           registry-url: "https://npm.pkg.github.com"
           scope: "@lesjoursfr"
 
