--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"url": "https://sindresorhus.com"
 	},
 	"engines": {
-		"node": "20.x || 22.x || 24.x"
+		"node": "22.x || 24.x"
 	},
 	"exports": "./lib/index.js",
 	"types": "./lib/index.d.ts",
@@ -52,9 +52,9 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.38.0",
-		"@tsconfig/node20": "^20.1.6",
+		"@tsconfig/node22": "^22.0.2",
 		"@types/mocha": "^10.0.10",
-		"@types/node": "^22.18.12",
+		"@types/node": "^24.9.2",
 		"eslint": "^9.38.0",
 		"eslint-config-prettier": "^10.1.8",
 		"globals": "^16.4.0",
